# leadtech

./: .env.example  .gitignore  README.md  app.py  generate_cvs.py  pyproject.toml
utils/: avatars.py  cv.py  rag.py
