[project]
name = "leadtech"
version = "1.0.0"
description = "Leadtech technical task"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "faker>=37.11.0",
    "llama-index>=0.10.68",
    "openai>=2.3.0",
    "openai-agents>=0.1.0",
    "pydantic[email]>=2.12.1",
    "python-slugify>=8.0.4",
    "reportlab>=4.4.4",
    "streamlit>=1.50.0",
    "tqdm>=4.67.0",
]
